--- a/.env.example
+++ b/.env.example
@@ -1,27 +1,29 @@
 APP_NAME=my-app
 APP_ENV=local
-APP_KEY=base64:
+APP_KEY=base64:xxxxxxxxxxxx
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8080
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=my-app-db
+DB_HOST=my-app-mysql
 DB_PORT=3306
 DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=laravel
+DB_PASSWORD=xxxxxxxxxxxx
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+CACHE_DRIVER=redis
 QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
+SESSION_DRIVER=redis
 SESSION_LIFETIME=120
 
-MEMCACHED_HOST=my-app-memcached
+REDIS_HOST=my-app-redis-master
 
 
-MYSQL_ROOT_PASSWORD=
+MYSQL_ROOT_PASSWORD=xxxxxxxxxxxx
 MYSQL_DATABASE=laravel
+MYSQL_USER=laravel
+MYSQL_PASSWORD=xxxxxxxxxxxx
