--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 /public/hot
 /public/storage
 /storage/*.key
-/vendor
 .env
 .env.backup
 .phpunit.result.cache
@@ -11,3 +10,8 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
+# exclude everything
+vendor/*
+
+# exception to the rule
+!vendor/.gitkeep 
