remove nginx image from devspace and move it to deployment

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=my-app
 APP_ENV=local
-APP_KEY=base64:xxxxxxxxxxxx
+APP_KEY=base64:ByWHm1npgLZ0yu0B9iqJezDoH3J2CjT3fzJodMUnFcA=
 APP_DEBUG=true
 APP_URL=http://localhost:8080
 
@@ -8,7 +8,7 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=my-app-mysql
+DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=laravel
 DB_USERNAME=laravel
@@ -20,10 +20,23 @@ QUEUE_CONNECTION=sync
 SESSION_DRIVER=redis
 SESSION_LIFETIME=120
 
-REDIS_HOST=my-app-redis-master
-
+REDIS_HOST=redis-master
+REDIS_PASSWORD=xxxxxxxxxxxx
 
 MYSQL_ROOT_PASSWORD=xxxxxxxxxxxx
 MYSQL_DATABASE=laravel
 MYSQL_USER=laravel
 MYSQL_PASSWORD=xxxxxxxxxxxx
+
+# devspace values
+DEPLOYMENT_NAME=app
+
+PHP_IMAGE=leventogut/php
+
+NGINX_IMAGE=nginx:1.19
+
+REDIS_CHART=bitnami/redis
+REDIS_CHART_VERSION=12.8.3
+
+MYSQL_CHART=bitnami/mysql
+MYSQL_CHART_VERSION=8.4.4
