change deployment names to variavbles

--- a/.env.example
+++ b/.env.example
@@ -28,8 +28,11 @@ MYSQL_DATABASE=laravel
 MYSQL_USER=laravel
 MYSQL_PASSWORD=xxxxxxxxxxxx
 
-# devspace values
-DEPLOYMENT_NAME=app
+
+
+APP_DEPLOYMENT_NAME=app
+MYSQL_DEPLOYMENT_NAME=mysql
+REDIS_DEPLOYMENT_NAME=redis
 
 PHP_IMAGE=leventogut/php
 
