--- a/devspace.yaml
+++ b/devspace.yaml
@@ -8,7 +8,7 @@ images:
     - USER root
     dockerfile: Dockerfile
 deployments:
-- name: ${DEPLOYMENT_NAME}
+- name: ${APP_DEPLOYMENT_NAME}
   helm:
     componentChart: true
     values:
@@ -40,7 +40,7 @@ deployments:
       labels:
         app: nginx
         portforward: true
-- name: mysql
+- name: ${MYSQL_DEPLOYMENT_NAME}
   helm:
     componentChart: false
     chart:
@@ -52,7 +52,7 @@ deployments:
         database: ${MYSQL_DATABASE}
         username: ${MYSQL_USER}
         password: ${MYSQL_PASSWORD}
-- name: redis
+- name: ${REDIS_DEPLOYMENT_NAME}
   helm:
     componentChart: false
     chart:
