--- a/.env.example
+++ b/.env.example
@@ -37,6 +37,7 @@ REDIS_DEPLOYMENT_NAME=redis
 PHP_IMAGE=leventogut/php
 
 NGINX_IMAGE=nginx:1.19
+NGINX_CONFIG_CONFIGMAP_NAME=nginx-config
 
 REDIS_CHART=bitnami/redis
 REDIS_CHART_VERSION=12.8.3
