--- a/devspace.yaml
+++ b/devspace.yaml
@@ -19,11 +19,6 @@ deployments:
       containers:
       - name: nginx
         image: ${NGINX_IMAGE}
-        command:
-        - "/bin/sh"
-        args:
-        - "-c"
-        - "nginx-debug -g 'daemon off;'"
         volumeMounts:
         - containerPath: /etc/nginx/nginx.conf
           volume:
@@ -48,6 +43,9 @@ deployments:
             name: ${SHARED_VOLUME_NAME}
             subPath: /shared
             readOnly: false
+      service:
+        ports:
+        - port: 80
       volumes:
       - name: nginx-config
         configMap:
@@ -57,6 +55,7 @@ deployments:
       labels:
         app: nginx
         portforward: true
+    recreate: true
 - name: mysql
   helm:
     componentChart: false
@@ -108,6 +107,14 @@ dev:
     - node_modules/
     onUpload:
       restartContainer: true
+  logs:
+    showLast: 100
+    sync: true
+    selectors:
+    - containerName: php
+    - containerName: nginx
+    - containerName: mysql
+    - containerName: redis
 profiles:
 - name: production
   patches:
