--- a/deploy/nginx-config-configmap.yaml
+++ b/deploy/nginx-config-configmap.yaml
@@ -2,7 +2,6 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: nginx-config
-  namespace: default
 data:
   nginx.conf: |-
     events {
@@ -12,7 +11,7 @@ data:
         server {
             listen 80 default_server;
             server_name nginx;
-            root /shared/var/www/html/public;
+            root /shared/;
 
             add_header X-Frame-Options "SAMEORIGIN";
             add_header X-Content-Type-Options "nosniff";
@@ -25,21 +24,10 @@ data:
 
             location = / {
               try_files = @php-fpm;
-                
             }
 
             location = /index.php {
               try_files = @php-fpm;
-            }
-
-            location / {
-              try_files = $uri $uri/ @php-fpm;
-            }
-
-            location ~ \.php$ {
-                fastcgi_pass 127.0.0.1:9000;
-                fastcgi_param SCRIPT_FILENAME /var/www/html/public/index.php;
-                include fastcgi_params;
             }
 
             location @php-fpm {
@@ -55,7 +43,7 @@ data:
             location = /favicon.ico { access_log off; log_not_found off; }
             location = /robots.txt  { access_log off; log_not_found off; }
 
-            error_log /var/log/nginx/error.log debug;
-            access_log /var/log/nginx/access.log;
+            error_log /dev/stdout debug;
+            access_log /dev/stdout;
         }
     }
