--- a/deploy/nginx-config-configmap.yaml
+++ b/deploy/nginx-config-configmap.yaml
@@ -11,7 +11,7 @@ data:
         server {
             listen 80 default_server;
             server_name nginx;
-            root /shared/;
+            root /assets/;
 
             add_header X-Frame-Options "SAMEORIGIN";
             add_header X-Content-Type-Options "nosniff";
@@ -29,7 +29,7 @@ data:
             location = /index.php {
               try_files = @php-fpm;
             }
-
+            
             location @php-fpm {
                 fastcgi_pass 127.0.0.1:9000;
                 fastcgi_param SCRIPT_FILENAME /var/www/html/public/index.php;
@@ -42,8 +42,5 @@ data:
 
             location = /favicon.ico { access_log off; log_not_found off; }
             location = /robots.txt  { access_log off; log_not_found off; }
-
-            error_log /dev/stdout debug;
-            access_log /dev/stdout;
         }
     }
