--- a/.dockerignore
+++ b/.dockerignore
@@ -7,3 +7,6 @@ Dockerfile
 # Ignore devspace.yaml file to prevent image rebuilding after config changes
 devspace.yaml
 .devspace
+
+# Ignore deploy folder to prevent image rebuilding after config changes
+deploy
