--- a/devspace.yaml
+++ b/devspace.yaml
@@ -36,17 +36,17 @@ deployments:
       replicas: 1
       containers:
       - name: nginx
-        image: nginx:1.19
+        image: nginx:${NGINX_VERSION}
         volumeMounts:
         - containerPath: /etc/nginx/nginx.conf
           volume:
             name: nginx-config
             subPath: nginx.conf
             readOnly: true
-        - containerPath: /shared
+        - containerPath: /assets
           volume:
             name: ${ASSET_VOLUME_NAME}
-            subPath: /shared
+            subPath: /assets
             readOnly: true
       - name: php
         image: ${APP_IMAGE}
@@ -56,14 +56,7 @@ deployments:
         - "-c"
         - |
           cp -r /var/www/html/public/* /assets/;
-          
-          while ! mysql -h"$DB_HOST" -P"$DB_PORT" -u"$DB_USERNAME" -p"$DB_PASSWORD" >/dev/null 2>&1;
-          do
-            echo "Waiting for database to start..."
-            sleep 3
-          done
 
-          php artisan migrate;
           php-fpm
         env:
         - name: APP_KEY
@@ -84,6 +77,30 @@ deployments:
             name: ${ASSET_VOLUME_NAME}
             subPath: /assets
             readOnly: false
+      initContainers:
+      - name: php-init
+        image: ${APP_IMAGE}
+        command:
+        - "/bin/sh"
+        args:
+        - "-c"
+        - |
+          while ! mysql -h"$DB_HOST" -P"$DB_PORT" -u"$DB_USERNAME" -p"$DB_PASSWORD" >/dev/null 2>&1;
+          do
+            echo "Waiting for database to start..."
+            sleep 3
+          done
+
+          php artisan migrate
+        env:
+        - name: DB_HOST
+          value: $!{DB_HOST}
+        - name: DB_PORT
+          value: $!{DB_PORT}
+        - name: DB_USERNAME
+          value: $!{DB_USERNAME}
+        - name: DB_PASSWORD
+          value: $!{DB_PASSWORD}
       service:
         ports:
         - port: 80
@@ -122,15 +139,12 @@ dev:
   - imageName: app
     excludePaths:
     - .git/
+    - vendor/
+    - node_modules/
     uploadExcludePaths:
     - Dockerfile
     - devspace.yaml
-    - vendor/
-    - node_modules/
     - deploy/
-    downloadExcludePaths:
-    - vendor/
-    - node_modules/
     onUpload:
       restartContainer: true
       execRemote:
@@ -142,6 +156,11 @@ dev:
     sync: true
     selectors:
     - containerName: nginx
+  autoReload:
+    paths:
+    - Dockerfile
+    images:
+    - app
 vars:
 - name: APP_IMAGE
   question: Which image repository should your image be pushed to? (e.g. dockerhubuser/image, gcr.io/project/image)
@@ -154,12 +173,16 @@ vars:
 commands:
 - name: artisan
   command: devspace enter -c php -- php artisan
+  description: Entry point for artisan commands.
 - name: composer
   command: devspace enter -c php -- composer
+  description: Entry point for composer commands.
 - name: php
   command: devspace enter -c php -- php
+  description: Entry point for PHP commands.
 - name: npm
   command: devspace enter -c php -- npm
+  description: Entry point for NPM commands.
 - name: update-db-user
   command: |
     devspace enter --wait -l app.kubernetes.io/name=mysql -- sh -c "
@@ -169,9 +192,17 @@ commands:
         sleep 3;
       done;
 
-      echo \"CREATE USER IF NOT EXISTS '${DB_USERNAME}'@'%' IDENTIFIED BY '${DB_PASSWORD}'; ALTER USER laravel IDENTIFIED BY '${DB_PASSWORD}';\" | mysql -u root -p'${DB_ROOT_PASSWORD}'"
+      echo \"CREATE USER IF NOT EXISTS '${DB_USERNAME}'@'%' IDENTIFIED BY '${DB_PASSWORD}'; ALTER USER '${DB_USERNAME}' IDENTIFIED BY '${DB_PASSWORD}';\" | mysql -u root -p'${DB_ROOT_PASSWORD}'"
+  description: Update Mysql DB User user/password.
 - name: generate-key
   command: TMP_FILE=.devspace/app_key.tmp && docker run --rm -v $PWD:/app composer/composer bash -c "composer install && php artisan key:generate --show >$TMP_FILE" && devspace set var APP_KEY="$(cat $TMP_FILE)" && rm $TMP_FILE
+  description: Generate APP_KEY.
+- name: migrate
+  command: devspace enter -c php -- php artisan migrate
+  description: Run DB migrations
+- name: mysql
+  command: devspace enter -c mysql -- mysql -h'${DB_HOST}' -P'${DB_PORT}' -u'${DB_USERNAME}' -p'${DB_PASSWORD}'
+  description: Enter to MySQL shell.
 hooks:
 - command: "devspace"
   args: ["run", "update-db-user"]
@@ -185,6 +216,25 @@ profiles:
     path: images.app.appendDockerfileInstructions
   - op: remove
     path: images.app.injectRestartHelper
+  - op: add
+    path: images.app.appendDockerfileInstructions
+    value:
+      RUN npm run prod
+  - op: add
+    path: images.app.appendDockerfileInstructions
+    value:
+      RUN php artisan optimize 
+- name: development
+  patches:
+  - op: add
+    path: images.app.appendDockerfileInstructions
+    value:
+      RUN npm run dev
+  - op: add
+    path: images.app.appendDockerfileInstructions
+    value: |
+      RUN pecl install xdebug \
+      && docker-php-ext-enable xdebug
 - name: interactive
   patches:
   - op: add
