--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=my-app
 APP_ENV=local
 APP_DEBUG=true
 APP_URL=http://localhost:8080
-
+# APP_KEY will be loaded as env variable (set with `devspace set var`)
 
 DB_MYSQL_VERSION=8.0.23
 DB_CONNECTION=mysql
@@ -17,7 +17,7 @@ REDIS_VERSION=6.0.12
 REDIS_HOST=redis-master
 # REDIS_PASSWORD will be loaded as env variable (set with `devspace set var`)
 
-NGINX_VERSION=1.9
+NGINX_IMAGE_VERSION=1.9
 
 LOG_CHANNEL=errorlog
 LOG_LEVEL=debug
